<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_to_favorites"
        android:title="@string/add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/remove_from_favorites"
        android:title="@string/add_to_favorites"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/send_message"
        android:icon="@drawable/ic_icon_message"
        android:title="@string/send_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact_owner"
        android:title="@string/contact_owner"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_statistics"
        android:title="@string/show_statistics"
        app:showAsAction="never" />

</menu>