<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.adding.Adding1Fragment" >

    <!-- Product details -->
    <LinearLayout
        android:id="@+id/productDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Images slider -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Image to show -->
                <ImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_placeholder"
                    tools:ignore="ContentDescription" />

                <!-- Previous image button -->
                <ImageButton
                    android:id="@+id/buttonPreviousImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/spacing_md"
                    android:src="@drawable/ic_previous"
                    tools:ignore="ContentDescription" />

                <!-- Next image button -->
                <ImageButton
                    android:id="@+id/buttonNextImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/spacing_md"
                    android:src="@drawable/ic_next"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_sm"
            android:text="@string/placeholder_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md"
            android:gravity="end"
            android:text="@string/price"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:text="@string/product_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md"
            android:text="@string/further_informations"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_category"
            android:drawableLeft="@drawable/ic_category"
            android:drawablePadding="@dimen/spacing_sm"
            android:text="@string/placeholder_category"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:drawableStart="@drawable/ic_location"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="@dimen/spacing_sm"
            android:text="@string/placeholder_location"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/textViewReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:drawableStart="@drawable/ic_number"
            android:drawableLeft="@drawable/ic_number"
            android:drawablePadding="@dimen/spacing_sm"
            android:text="@string/product_reference"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/textViewBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:drawableStart="@drawable/ic_tag"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="@dimen/spacing_sm"
            android:text="@string/product_brand"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/textViewDimensions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:drawableStart="@drawable/ic_size"
            android:drawableLeft="@drawable/ic_size"
            android:drawablePadding="@dimen/spacing_sm"
            android:text="@string/product_dimensions"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <Button
            android:id="@+id/buttonModify"
            android:text="@string/modifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- Loading spinner -->
    <include
        layout="@layout/loading_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>