<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardCornerRadius="@dimen/spacing_sm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/spacing_lg"
    android:layout_marginStart="@dimen/spacing_lg"
    android:layout_marginBottom="@dimen/spacing_md"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_md"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/spacing_sm"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:textColor="@color/white_20"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:layout_marginRight="@dimen/spacing_sm"
                android:text="@string/date_format" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/placeholer_me"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/no_message" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>